--- a/client/src/css/faq.css
+++ b/client/src/css/faq.css
@@ -10,8 +10,8 @@
   }
   
   .faq-question {
-    padding: 20px 0;
-    border-bottom: 1px dotted #ccc;
+    /* padding: 10px 0; */
+    /* border-bottom: 1px dotted #ccc; */
   }
   
   .panel-title {
