--- a/client/src/css/pay123.css
+++ b/client/src/css/pay123.css
@@ -6,15 +6,15 @@
   
   body,
   html {
-    height     : 100%;
-    min-height : 100%;
+    /* height     : 100%; */
+    /* min-height : 100%; */
   }
   
   body {
-    margin           : 0;
-    background-color : #e7e7e7;
-    font-family      : 'Roboto',
-                       sans-serif;
+    /* margin           : 0; */
+    /* background-color : #e7e7e7; */
+    /* font-family      : 'Roboto', */
+                       /* sans-serif; */
   }
   
   /* Credit Card */
