--- a/client/src/css/navbar.css
+++ b/client/src/css/navbar.css
@@ -18,9 +18,10 @@
     justify-content: space-between;
     align-items: center;
     height: 60px;
+    position: relative;
     background-color: black;
     padding: 0.2rem .2rem;
-    z-index: 1;
+    z-index: 999;
     width: 100%;
     top: 0;
     /* border-bottom: solid 1px var(--primary-color); */
